--- a/style.css
+++ b/style.css
@@ -14,16 +14,14 @@
 }
 
 .logo-icon {
-    width: 80px;
-    height: 40px;
-    flex-shrink: 0;
+    width: 65px;
+    height: 30px;
 }
 
 .logo-name {
-    font-size: 45px;
     font-weight: 700;
     color: #0B0223;
-    font-size: 45px;
+    font-size: 36px;
     font-weight: 700;
 }
 
@@ -40,9 +38,9 @@
 
 .nav-ber {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    margin: 20px 0;
+    margin: 20px 160px;
 }
 
 .nav-menu {
@@ -62,7 +60,7 @@
     text-decoration: none;
     margin: 0 30px;
     color: #3C354F;
-    font-size: 18px;
+    font-size: 17px;
     font-weight: 500;
 }
 
@@ -81,12 +79,94 @@
     background: rgba(11, 2, 35, 0.1);
     text-decoration: none;
     color: #3C354F;
-    font-size: 18px;
+    font-size: 17px;
     font-weight: 500;
 }
 
 .follow-icon {
     height: 20px;
+}
+
+/* banner section */
+
+.banner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 160px;
+}
+
+.banner-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-image: url("images/Group\ 14.png");
+    width: 600px;
+    height: 590px;
+    fill: linear-gradient(223deg, rgba(140, 87, 238, 0.03) 0%, rgba(241, 68, 174, 0.03) 100%);
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin-left: -160px;
+    padding: 0 0 0 160px;
+}
+
+.banner-title {
+    color: #0B0223;
+    font-size: 46px;
+    font-weight: 600;
+    padding-bottom: 20px;
+}
+
+.goat {
+    font-size: 90px;
+    font-weight: 800;
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.banner-info {
+    display: flex;
+    gap: 12px;
+    padding: 8px 0;
+    color: #534C64;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.banner-btn {
+    margin-top: 35px;
+}
+
+.btn-1,
+.btn-2 {
+    padding: 20px 40px;
+    border: none;
+    border-radius: 50px;
+    color: #FFF;
+    font-size: 20px;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.btn-1 {
+    background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
+    margin-right: 20px;
+}
+
+.btn-2 {
+    background: #4EC5F7;
+}
+
+.btn-1:hover,
+.btn-2:hover {
+    color: #0B0223;
+}
+
+.banner-img {
+    width: 600px;
+    height: 590px;
 }
 
 /* responsive styles */
@@ -96,7 +176,7 @@
 @media screen and (max-width: 425.6px) {
     .nav-ber {
         flex-direction: column;
-        margin: 80px 100px 40px;
+        margin: 40px 20px 40px;
     }
 
     .nav-menu {
@@ -108,6 +188,56 @@
         flex-direction: column;
         gap: 20px;
         margin: 30px 0;
+    }
+
+    .banner {
+        flex-direction: column-reverse;
+        margin: 0 20px 40px;
+    }
+
+    .banner-img {
+        width: 100%;
+        height: 100%;
+        margin-bottom: 10px;
+    }
+    
+    .banner-content {
+        width: 60%;
+        height: 300px;
+        margin-left: auto;
+        margin-bottom: 0;
+        padding: 0px 80px;
+    }
+
+    .banner-title {
+        font-size: 26px;
+        padding-bottom: 8px;
+    }
+
+    .goat {
+        font-size: 50px;
+    }
+
+    .banner-icon {
+        width: 16px;
+    }
+
+    .banner-info {
+        font-size: 12px;
+        padding: 4px 0;
+    }
+
+    .banner-btn {
+        margin-top: 16px;
+    }
+
+    .btn-1 {
+        margin: 0;
+    }
+
+    .btn-1, .btn-2 {
+        font-size: 12px;
+        padding: 12px 20px;
     }
 }
 
@@ -126,5 +256,23 @@
 
     .menu-container {
         margin: 20px 0 30px;
+    }
+
+    .banner {
+        flex-direction: column-reverse;
+        margin: 0 40px 40px;
+    }
+
+    .banner-img {
+        width: 100%;
+        height: 100%;
+        margin-bottom: 20px;
+    }
+    
+    .banner-content {
+        width: 60%;
+        height: 540px;
+        margin: auto;
+        padding: 0px 160px;
     }
 }
