--- a/style.css
+++ b/style.css
@@ -266,12 +266,12 @@
     -webkit-text-fill-color: transparent;
 }
 
-/* .play-icon {
+.play-btn {
     position: absolute;
     top: 40%;
     left: 120px;
     width: 40px;
-} */
+}
 
 .card-icon:hover {
     text-align: center;
@@ -426,10 +426,23 @@
         font-size: 24px;
     }
 
+    .video {
+        margin: 80px 20px;
+    }
+
+    .video-info {
+        margin-bottom: 40px;
+    }
+
+    .video-card {
+        flex-direction: column;
+        align-items: center;
+        gap: 30px;
+    }
+
     .play {
         flex-direction: column;
         margin: 0 20px;
-        border: 1px solid tomato;
     }
 
     .play-content {
@@ -512,10 +525,24 @@
         margin-bottom: -10px;
     }
 
+    .video {
+        margin: 80px 40px;
+    }
+
+    .video-info {
+        margin-bottom: 40px;
+    }
+
+    .video-card {
+        display: grid;
+        justify-content: space-around;
+        grid-template-columns: repeat(2, 280px);
+        gap: 30px;
+    }
+
     .play {
         flex-direction: column;
         margin: 0 20px;
-        border: 1px solid tomato;
     }
 
     .play-content {
