--- a/style.css
+++ b/style.css
@@ -318,6 +318,82 @@
     margin-left: -130px;
 }
 
+/* game styles */
+
+.game {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    justify-items: center;
+    align-items: center;
+    margin: 0 160px 80px;
+    gap: 10px;
+}
+
+.game-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 10px;
+    cursor: pointer;
+    height: 60px;
+}
+
+.action:hover {
+    width: 170px;
+}
+
+.adventure:hover {
+    width: 200px;
+}
+
+.arcade:hover {
+    width: 170px;
+}
+
+.educational:hover {
+    width: 210px;
+}
+
+.word:hover {
+    width: 160px;
+}
+
+.role:hover {
+    width: 210px;
+}
+
+.music:hover {
+    width: 165px;
+}
+
+.puzzle:hover {
+    width: 170px;
+}
+
+.strategy:hover {
+    width: 180px;
+}
+
+.game-content:hover {
+    border: 2px solid #FF42A5;
+    border-radius: 80px;
+}
+
+.game-icon {
+    width: 40px;
+}
+
+.game-name {
+    color: #0B0223;
+    font-size: 15px;
+    font-weight: 600;
+}
+
+.game-name:hover {
+    color: #FF42A5;
+}
+
 /* responsive styles */
 
 /* mobile responsive styles */
@@ -464,6 +540,26 @@
         margin-top: -140px;
         margin-left: -62px;
     }
+
+    .game {
+        grid-template-columns: repeat(3, 1fr);
+        justify-items: center;
+        align-items: center;
+        margin: 40px 20px;
+        gap: 5px;
+    }
+
+    .game-content {
+        gap: 5px;
+    }
+
+    .game-icon {
+        width: 20px;
+    }
+
+    .game-name {
+        font-size: 10px;
+    }
 }
 
 /* tablet responsive styles */
@@ -565,4 +661,24 @@
         margin-top: -240px;
         margin-left: -125px;
     }
+
+    .game {
+        grid-template-columns: repeat(3, 1fr);
+        justify-items: center;
+        align-items: center;
+        margin: 40px;
+        gap: 10px;
+    }
+
+    .game-content {
+        gap: 10px;
+    }
+
+    /* .game-icon {
+        width: 20px;
+    } */
+
+    /* .game-name {
+        font-size: 10px;
+    } */
 }
