--- a/style.css
+++ b/style.css
@@ -257,6 +257,7 @@
 
 .card-icon {
     width: 280px;
+    border: 3px solid white;
     border-radius: 16px;
     cursor: pointer;
 }
@@ -332,13 +333,50 @@
     padding: 100px 0;
 }
 
+.action {
+    grid-area: action;
+}
+
+.adventure {
+    grid-area: adventure;
+}
+
+.arcade {
+    grid-area: arcade;
+}
+
+.educational {
+    grid-area: educational;
+}
+
+.word {
+    grid-area: word;
+}
+
+.role {
+    grid-area: role;
+}
+
+.music {
+    grid-area: music;
+}
+
+.puzzle {
+    grid-area: puzzle;
+}
+
+.strategy {
+    grid-area: strategy;
+}
+
 .game-section {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    justify-items: center;
-    align-items: center;
+    grid-template-areas:
+    "action adventure   adventure   arcade      arcade  educational education     word"
+    "role   role        music       music       puzzle  puzzle      strategy      strategy"
+    ;
     margin: 0 160px;
-    gap: 10px;
+    gap: 20px;
 }
 
 .game-content {
@@ -349,6 +387,7 @@
     gap: 10px;
     cursor: pointer;
     height: 60px;
+    margin: 2px;
 }
 
 .action:hover {
@@ -390,6 +429,7 @@
 .game-content:hover {
     border: 2px solid #FF42A5;
     border-radius: 80px;
+    margin: auto;
 }
 
 .game-icon {
@@ -632,7 +672,11 @@
     }
 
     .game-section {
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-areas:
+        "action         adventure   arcade"
+        "educational    word        role"
+        "music          puzzle      strategy"
+        ;
         justify-items: center;
         align-items: center;
         margin: 40px 20px;
@@ -800,7 +844,11 @@
     }
 
     .game-section {
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-areas:
+        "action         adventure   arcade"
+        "educational    word        role"
+        "music          puzzle      strategy"
+        ;
         justify-items: center;
         align-items: center;
         margin: 40px;
