--- a/style.css
+++ b/style.css
@@ -251,46 +251,58 @@
 
 .card {
     position: relative;
-    text-align: center;
-    color: white;
+    display: inline-block;
 }
 
 .card-icon {
+    display: block;
+    transition: 0.5s ease;
     width: 280px;
-    border: 3px solid white;
-    border-radius: 16px;
-    cursor: pointer;
+    height: auto;
+    /* border: 3px solid white; */
+    border-radius: 20px;
 }
 
-.watch {
+.middle {
+    transition: 0.5s ease;
+    opacity: 0;
     position: absolute;
-    top: 54%;
-    left: 98px;
-    font-size: 20px;
-    font-weight: 600;
-    background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: #FF42A5;
+    text-align: center;
+    border: 3px solid #FF42A5;
+    border-radius: 20px;
 }
 
 .play-btn {
-    position: absolute;
-    top: 40%;
-    left: 120px;
-    width: 40px;
+    display: inline-block;
+    width: 45px;
+    padding-top: 45%;
+}
+
+.middle-text {
+    display: block;
+    top: 50%;
+    font-size: 20px;
+    font-weight: 600;
+    padding-top: 10px;
 }
 
 .card-icon:hover {
+    opacity: 0.3;
     text-align: center;
-    font-size: 20px;
-    font-weight: 600;
-    border: 3px solid #FF42A5;
-    border-radius: 16px;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.60) 0%, rgba(0, 0, 0, 0.60) 100%), lightgray 50% / cover no-repeat;
+}
+
+.middle:hover, .middle-text {
+    opacity: 1;
 }
 
 .card-info {
+    padding-top: 10px;
     width: 280px;
 }
 
