--- a/style.css
+++ b/style.css
@@ -255,8 +255,8 @@
     display: block;
     transition: 0.5s ease;
     width: 280px;
-    height: auto;
-    /* border: 3px solid white; */
+    height: 325px;
+    border: 3px solid rgba(255, 255, 255, 0);
     border-radius: 20px;
 }
 
@@ -266,8 +266,8 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 280px;
+    height: 325px;
     background-color: rgba(0, 0, 0, 0.6);
     color: #FF42A5;
     text-align: center;
@@ -276,9 +276,8 @@
 }
 
 .play-btn {
-    display: inline-block;
     width: 45px;
-    padding-top: 45%;
+    margin-top: 45%;
     cursor: pointer;
 }
 
@@ -287,15 +286,15 @@
     top: 50%;
     font-size: 20px;
     font-weight: 600;
-    padding-top: 10px;
+    margin-top: 10px;
 }
 
 .card-icon:hover {
     opacity: 0.3;
-    text-align: center;
 }
 
-.middle:hover, .middle-text {
+.middle:hover,
+.middle-text {
     opacity: 1;
 }
 
@@ -382,8 +381,8 @@
 .game-section {
     display: grid;
     grid-template-areas:
-    "action adventure   adventure   arcade      arcade  educational education     word"
-    "role   role        music       music       puzzle  puzzle      strategy      strategy"
+        "action adventure   adventure   arcade      arcade  educational education     word"
+        "role   role        music       music       puzzle  puzzle      strategy      strategy"
     ;
     margin: 0 160px;
     gap: 20px;
@@ -399,40 +398,16 @@
     margin: 5px auto;
 }
 
-.action:hover {
-    padding: 1%;
-}
-
-.adventure:hover {
-    padding: 1%;
-}
-
-.arcade:hover {
-    padding: 1%;
-}
-
-.educational:hover {
-    padding: 1%;
-}
-
-.word:hover {
-    padding: 1%;
-}
-
-.role:hover {
-    padding: 1%;
-}
-
-.music:hover {
-    padding: 1%;
-}
-
-.puzzle:hover {
-    padding: 1%;
-}
-
+.action:hover,
+.adventure:hover,
+.arcade:hover,
+.educational:hover,
+.word:hover,
+.role:hover,
+.music:hover,
+.puzzle:hover,
 .strategy:hover {
-    padding: 1%;
+    padding: 1% 1.5%;
 }
 
 .game-content:hover {
@@ -534,6 +509,9 @@
 /* mobile responsive styles */
 
 @media screen and (max-width: 425.6px) {
+
+    /* nav styles */
+
     .nav-ber {
         flex-direction: column;
         margin: 40px 20px 40px;
@@ -549,6 +527,8 @@
         gap: 20px;
         margin: 30px 0;
     }
+
+    /* banner styles */
 
     .banner {
         flex-direction: column-reverse;
@@ -601,6 +581,8 @@
         padding: 12px 20px;
     }
 
+    /* gamer styles */
+
     .gamer {
         flex-direction: column;
         background: white;
@@ -637,6 +619,8 @@
         font-size: 24px;
     }
 
+    /* video styles */
+
     .video {
         margin: 80px 20px;
     }
@@ -650,6 +634,8 @@
         align-items: center;
         gap: 30px;
     }
+
+    /* play styles */
 
     .play {
         flex-direction: column;
@@ -674,6 +660,8 @@
         margin: 0;
         margin-top: -140px;
         margin-left: -62px;
+
+        /* game styles */
     }
 
     .game {
@@ -682,9 +670,9 @@
 
     .game-section {
         grid-template-areas:
-        "action         adventure   arcade"
-        "educational    word        role"
-        "music          puzzle      strategy"
+            "action         adventure   arcade"
+            "educational    word        role"
+            "music          puzzle      strategy"
         ;
         justify-items: center;
         align-items: center;
@@ -703,6 +691,8 @@
     .game-name {
         font-size: 10px;
     }
+
+    /* footer styles */
 
     .footer {
         padding: 60px 0;
@@ -755,6 +745,9 @@
 /* tablet responsive styles */
 
 @media screen and (min-width: 425.7px) and (max-width: 768px) {
+
+    /* nav styles */
+
     .nav-ber {
         flex-direction: column;
         margin: 80px 20px 40px;
@@ -768,6 +761,8 @@
     .menu-container {
         margin: 20px 0 30px;
     }
+
+    /* banner styles */
 
     .banner {
         flex-direction: column-reverse;
@@ -786,6 +781,8 @@
         margin: auto;
         padding: 0px 160px;
     }
+
+    /* gamer styles */
 
     .gamer {
         flex-direction: column;
@@ -811,6 +808,8 @@
         margin-bottom: -10px;
     }
 
+    /* video styles */
+
     .video {
         margin: 80px 40px;
     }
@@ -825,6 +824,8 @@
         grid-template-columns: repeat(2, 280px);
         gap: 30px;
     }
+
+    /* play styles */
 
     .play {
         flex-direction: column;
@@ -852,11 +853,13 @@
         margin-left: -105px;
     }
 
+    /* game styles */
+
     .game-section {
         grid-template-areas:
-        "action         adventure   arcade"
-        "educational    word        role"
-        "music          puzzle      strategy"
+            "action         adventure   arcade"
+            "educational    word        role"
+            "music          puzzle      strategy"
         ;
         justify-items: center;
         align-items: center;
@@ -867,6 +870,8 @@
     .game-content {
         gap: 10px;
     }
+
+    /* footer styles */
 
     .footer {
         padding: 60px 0;
